--- a/assets/css/background-colour.css
+++ b/assets/css/background-colour.css
@@ -1,9 +1,9 @@
 
-
 .background {
-	background-color: #efede8;
+	background-color: white;
 	border:none;
 }
+/*#efede8*/
 
 .background-pr1 {
 	background-color: #e97010;
