--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -33,6 +33,10 @@
 
 
 /*MAIN ELEMENTS*/
+html {
+  scroll-behavior: smooth;
+}
+
 .copyright {
 	margin-left:2%;
 	font-size:10px;
@@ -53,12 +57,13 @@ a {
 	color:black;
 	text-decoration: none;
 	z-index:10;
+	transition: 0.3s;
 }
 
 a:hover {
 	font-style:italic;
 	cursor:pointer;
-	color:#04A362;
+	color: #bceafc;
 	z-index:10;
 
 }
@@ -129,6 +134,7 @@ a:hover {
 	margin-left:5%;
 	margin-right:5%;
 	margin-top:10%;
+	margin-bottom:25%;
 	text-align:right;
 	animation-name: fadeInOut;
   	animation-delay: 0s;
@@ -154,6 +160,7 @@ a:hover {
 	color:black;
 	border:1px dotted black;
 	border-radius:40%;
+	transition: 0.3s;
 }
 
 .arrow-header:hover {
@@ -181,7 +188,7 @@ a:hover {
 
 .pic:hover {
 	border:1px dotted black;
-	border-radius:40%;
+	border-radius:100%;
 }
 
 /*img {
