--- a/assets/css/background-colour.css
+++ b/assets/css/background-colour.css
@@ -8,61 +8,61 @@
 .background-pr1 {
 	background-color: #e97010;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr2 {
 	background-color: #2474E2;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr3 {
 	background-color: #04A362;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr4 {
 	background-color: #3C4148;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr5 {
 	background-color: #E0494F;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr6 {
 	background-color: #FFC048;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr7 {
 	background-color: #6D7E6C;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr8 {
 	background-color: #3C4148;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr9 {
 	background-color: #D8839A;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 .background-pr12 {
 	background-color: #B3DCF4;
 	border:none;
-	margin-top:0.5%;
+/*	margin-top:0.5%;*/
 }
 
 /*TEXT COLOUR*/
