--- a/assets/css/project-page.css
+++ b/assets/css/project-page.css
@@ -37,7 +37,7 @@
 	position:fixed;
 	justify-content: center;
 	align-items: center;
-	z-index: 10;
+	z-index: 2;
 	width:100%;
 	display:flex;
 	border:1px solid black;
@@ -163,52 +163,64 @@ a:hover {
 }
 
 /*NAVIGATION*/
+.navigation {
+	border:1px solid black;
+	background:white;
+	padding:1%;
+	padding-bottom:1.4%;
+	padding-top:1.4%;
+	width:100%;
+	position:fixed;
+	bottom:0px;
+	z-index:100;
+}
 .navigation-home {
 	position:fixed;
-	bottom:5%;
-	left:5%;
+	bottom:1%;
 	z-index:2;
-	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
-	mix-blend-mode: difference;
-	color:white;
+	color:black;
+	padding-left:2%;
+
 }
 
 .navigation-home:hover {
 	font-style:italic;
-	color:white;
+	color:black;
 }
 
 .navigation-next {
 	position:fixed;
-	bottom:5%;
+	bottom:1%;
 	right:5%;
-	z-index:4;
-	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
+	z-index:10;
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
-	mix-blend-mode: difference;
-	color:white;
+	color:black;
+	border:1px solid black;
+	border-radius:100%;
 }
 
 .navigation-next:hover {
 	font-style:italic;
-	color:white;
 }
 
 .navigation-prev {
 	position:fixed;
-	bottom:5%;
+	bottom:1%;
 	right:18%;
 	z-index:4;
-	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
-	mix-blend-mode: difference;
-	color:white;
+	color:black;
+	border:1px solid black;
+	border-radius:100%;
 }
 
 .navigation-prev:hover {
 	font-style:italic;
-	color:white;
+	color:black;
 }
 /*NAVIGATION*/
 
