--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -82,7 +82,8 @@ a:hover {
 	z-index: 10;
 	width:100%;
 	display:flex;
-	border:1px solid black;
+	border-top:1px solid black;
+	border-bottom:1px solid black;
 	background: white;
 
 }
