--- a/assets/css/about-page.css
+++ b/assets/css/about-page.css
@@ -79,7 +79,8 @@ a {
 	z-index: 10;
 	width:100%;
 	display:flex;
-	border:1px solid black;
+	border-top:1px solid black;
+	border-bottom:1px solid black;
 	background: white;
 
 }
