--- a/assets/css/project-page.css
+++ b/assets/css/project-page.css
@@ -112,7 +112,7 @@ a {
 
 a:hover {
 	cursor:pointer;
-	color:#04A362;
+	color: #bceafc;
 }
 /*MAIN ELEMENTS*/
 
@@ -170,7 +170,7 @@ a:hover {
 	background:white;
 	padding:1%;
 	padding-bottom:1.4%;
-	padding-top:2.2%;
+/*	padding-top:2.2%;*/
 	width:100%;
 	position:fixed;
 	bottom:0px;
@@ -182,7 +182,7 @@ a:hover {
 	position:fixed;
 	bottom:1%;
 	z-index:2;
-	font-size: calc(18px + (22 - 18) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	color:black;
 	padding-left:2%;
@@ -199,7 +199,7 @@ a:hover {
 	bottom:1%;
 	right:5%;
 	z-index:10;
-	font-size: calc(18px + (22 - 18) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	color:black;
 /*	border:1px solid black;
@@ -215,7 +215,7 @@ a:hover {
 	bottom:1%;
 	right:18%;
 	z-index:4;
-	font-size: calc(18px + (22 - 18) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	color:black;
 /*	border:1px solid black;
