--- a/assets/css/project-page.css
+++ b/assets/css/project-page.css
@@ -141,6 +141,7 @@ a:hover {
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 
+
 .about-title {
 	margin-top:5%;
 	margin-left:5%;
@@ -156,6 +157,15 @@ a:hover {
 	margin-right:45%;
 	font-size: calc(10px + (18 - 10) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.4em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+}
+
+@media only screen and (max-width: 600px) {
+    .mainbodycopy {
+     margin-right: 5%;
+    }
+    .about-body {
+    	margin-right:5%;
+    }
 }
 
 
