--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,10 @@ section.intro div.showreel {
   margin: 90px 0 90px 0;
 }
 
+section.intro div.showreel img {
+  width: 100%;
+}
+
 video {
   width: 100%;
 }
